{
    "name": "Controls",
    "maps": [
        {
            "name": "TopDownControls",
            "id": "8ee366fe-8ed7-42ce-af2f-51a0f9fbb646",
            "actions": [
                {
                    "name": "HoldPosition",
                    "type": "Button",
                    "id": "af890c8d-f0d8-449a-8bcd-136f43b57422",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "f4587ae0-39d1-4771-af25-68b1f7bcc516",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Patrol",
                    "type": "Button",
                    "id": "818c8cc5-970f-481d-8790-ef394517edf4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveCommand",
                    "type": "Button",
                    "id": "5e715d4e-f8a1-46e1-952c-0e73c5238ef2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "8f2c1f22-07d7-4d64-8bd0-29abb28370bd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BoxSelect",
                    "type": "Button",
                    "id": "7d8508e1-0007-477c-8645-fccf4bde466d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StackAction",
                    "type": "Button",
                    "id": "7e07e3b1-0a8a-41ed-a67b-d5df9af3f0f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AddToGroup",
                    "type": "Button",
                    "id": "7338b123-9376-41e4-8309-74bbe2784e37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RemoveFromGroup",
                    "type": "Button",
                    "id": "6bfa3bdf-0f32-4e4d-b5be-d39db1d28a0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AddAndRemoveFromOtherGroups",
                    "type": "Button",
                    "id": "03bd2721-80f5-4eb9-868f-933097a4b3f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Group1",
                    "type": "Button",
                    "id": "5ba0610e-bacb-49c1-a819-10962916f0fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Group2",
                    "type": "Button",
                    "id": "db6c1f88-ce37-44cc-89a4-db3c1bdc4f93",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Group3",
                    "type": "Button",
                    "id": "eb66788e-6fda-4f98-957b-8124e404e471",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Group4",
                    "type": "Button",
                    "id": "3517e6e9-5f8c-4ac0-960f-8c4041d58472",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Group5",
                    "type": "Button",
                    "id": "14d8bf97-7673-49e7-af10-1acd5db515e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Group6",
                    "type": "Button",
                    "id": "80305b3c-cd48-45c9-a753-c85d74b174bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Group7",
                    "type": "Button",
                    "id": "0846d5b1-2bed-49d6-a0eb-cd49ba187431",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Group8",
                    "type": "Button",
                    "id": "27aac874-1243-47dc-9822-3c71bc7e74b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Group9",
                    "type": "Button",
                    "id": "fcf96da0-4547-4041-80fd-3e900d3fac97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Group0",
                    "type": "Button",
                    "id": "89b171ec-0d7e-401a-b68b-180c96049c66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AddOrReplaceCamera",
                    "type": "Button",
                    "id": "8ac01832-3d45-488b-80b8-57548400cd3f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CamBase1",
                    "type": "Button",
                    "id": "251ec99c-d057-4b92-b795-d243591b3e07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CamBase2",
                    "type": "Button",
                    "id": "32ca2f82-eeeb-4261-b347-90cc558d5c67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CamBase3",
                    "type": "Button",
                    "id": "92f3552f-4a7d-40fb-b56d-27e2e04d016f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CamBase4",
                    "type": "Button",
                    "id": "126f86c9-9100-4614-994b-b2fed8d3312f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CamBase5",
                    "type": "Button",
                    "id": "22c1be50-5562-4836-9d8f-d78c772d4232",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CamBase6",
                    "type": "Button",
                    "id": "547ca704-7a8a-47c3-9d76-e18ce7146ef8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CamBase7",
                    "type": "Button",
                    "id": "33cc00bb-76a9-4b79-b428-111ba3bdf9a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CamBase8",
                    "type": "Button",
                    "id": "aca25dd7-8a23-430c-88a2-c69e86532bd3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CamBase9",
                    "type": "Button",
                    "id": "0b1b7ebb-e58a-46a1-9b25-5de982663c51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CamBase10",
                    "type": "Button",
                    "id": "badd191e-ecc9-4d5b-8845-60c0fe347295",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b51fd4ac-70cf-4547-9ae0-5adb9c695630",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4928bfb2-f54f-450d-9651-6afef81b59ae",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "PC",
                    "action": "BoxSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d608903-53db-4a10-9c6b-78092028fe0d",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "StackAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c6bffd9-3ed9-4157-b5db-512ab26cf599",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveCommand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ff7ac75-8b40-4653-a47e-209b2e55040f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "HoldPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62879f76-4dee-4992-8f32-1c9ac748698c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69ce3bc4-2495-4683-b772-bc1ee77c6f41",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Patrol",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25fff336-d460-47ce-9dbd-a6d412e391b9",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "AddToGroup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66b9d496-d832-4062-b043-c429f8c2c9bc",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "RemoveFromGroup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2abe8233-05c3-43d6-aa02-eb696ae696be",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "AddAndRemoveFromOtherGroups",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee12ebf5-74a5-49d2-8b99-ff9f1c76f4ca",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Group1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ea585d5-82eb-48e8-8c49-93efee43fd50",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Group2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd8adde1-3b82-4654-8d6d-d75459c1fa78",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Group3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0cc755ee-9e7a-4e6d-88fe-32341f660f5a",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Group4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53538392-585b-4f5e-a08d-6f44cc44c247",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Group5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58c4fba8-f8f7-457b-82d0-b3dc18f37ba3",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Group6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a49adf9b-cb45-40e5-92ad-68b7c0cc3e07",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Group7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f91e0de-8c6b-4371-9084-1202fbbe60d8",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Group8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9856dabb-0590-45be-8729-80da9d0bc832",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Group9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af7d1275-235c-4e15-b763-89a1e9a7e32e",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Group0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52e63b2a-c28e-4b04-b518-c8d796114b55",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "CamBase1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25f63af4-5380-4741-a36c-c5e204e119c9",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "CamBase2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99acd8eb-272f-445a-8c14-7019518a508c",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "CamBase3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fa7067a-7232-412b-81ff-277ae95a9d1a",
                    "path": "<Keyboard>/f4",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "CamBase4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ee8216d-ec7d-4a6f-82bd-591d66757451",
                    "path": "<Keyboard>/f5",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "CamBase5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3892de59-e0bc-48cf-8988-6d38b9fad2ce",
                    "path": "<Keyboard>/f6",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "CamBase6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f320b0d5-3f63-4f9a-aa71-eecafba071f3",
                    "path": "<Keyboard>/f7",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "CamBase7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0801e7e-3bc8-42a3-a344-1f15dafcd3fe",
                    "path": "<Keyboard>/f8",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "CamBase8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccde0a0f-0843-4b29-9d39-6bea3664fc9e",
                    "path": "<Keyboard>/f9",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "CamBase9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b415e5d-ba8b-4660-9654-9be29b02ae6d",
                    "path": "<Keyboard>/f10",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "CamBase10",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e5fc132-f6c4-4824-892e-183c866ff366",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "AddOrReplaceCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}